--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add_widget">Add widget</string>
     <string name="description">Description:</string>
     <string name="step_description">TextView</string>
+    <string name="please_check_your_internet_connection">Please check your internet connection.</string>
 </resources>
